# ChangeLog for x11-themes/gtk-engines-qtcurve
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.39 2008/08/05 17:30:17 yngwin Exp $

*gtk-engines-qtcurve-0.59.7-r1 (05 Aug 2008)

  05 Aug 2008; Ben de Groot <yngwin@gentoo.org> metadata.xml,
  +gtk-engines-qtcurve-0.59.7-r1.ebuild:
  Adding firefox3 useflag and dep, updating metadata with longdescription
  and useflags.

*gtk-engines-qtcurve-0.59.7 (05 Aug 2008)

  05 Aug 2008; Ben de Groot <yngwin@gentoo.org>
  +gtk-engines-qtcurve-0.59.7.ebuild:
  Version bump

*gtk-engines-qtcurve-0.59.6 (19 Jul 2008)

  19 Jul 2008; Ben de Groot <yngwin@gentoo.org>
  +gtk-engines-qtcurve-0.59.6.ebuild:
  Version bump

  12 Jul 2008; Ben de Groot <yngwin@gentoo.org> -files/build.patch,
  -gtk-engines-qtcurve-0.57.1.ebuild, -gtk-engines-qtcurve-0.59.2.ebuild,
  -gtk-engines-qtcurve-0.59.3.ebuild:
  Clean out old versions. Fixes bug 225587.

  06 Jul 2008; Friedrich Oslage <bluebird@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  Stable on sparc, bug #228249

*gtk-engines-qtcurve-0.59.5 (01 Jul 2008)

  01 Jul 2008; Ben de Groot <yngwin@gentoo.org>
  +gtk-engines-qtcurve-0.59.5.ebuild:
  Version bump.

  01 Jul 2008; Jeroen Roovers <jer@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  Stable for HPPA (bug #228249).

  28 Jun 2008; Tobias Klausmann <klausman@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  Stable on alpha, bug #228249

  22 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  stable x86, bug 228249

  21 Jun 2008; Markus Rothe <corsair@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  Stable on ppc64; bug #228249

  20 Jun 2008; <welp@gentoo.org> gtk-engines-qtcurve-0.59.4.ebuild:
  Stable on amd64; Bug 228249

  06 Jun 2008; Friedrich Oslage <bluebird@gentoo.org>
  gtk-engines-qtcurve-0.59.4.ebuild:
  add ~sparc keyword, bug 218436
