@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/qtcurve-qt4
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve-qt4/ChangeLog,v 1.41 2008/09/24 19:03:16 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve-qt4/ChangeLog,v 1.42 2008/09/28 14:57:11 maekke Exp $
+
+  28 Sep 2008; Markus Meier <maekke@gentoo.org> qtcurve-qt4-0.59.6.ebuild:
+  amd64/x86 stable, bug #238598
 
   24 Sep 2008; Ben de Groot <yngwin@gentoo.org>
   qtcurve-qt4-0.59.3-r1.ebuild, qtcurve-qt4-0.59.4.ebuild,
