@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-qtcurve
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.39 2008/08/05 17:30:17 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.40 2008/09/28 14:58:35 maekke Exp $
+
+  28 Sep 2008; Markus Meier <maekke@gentoo.org>
+  gtk-engines-qtcurve-0.59.7.ebuild:
+  amd64/x86 stable, bug #238598
 
 *gtk-engines-qtcurve-0.59.7-r1 (05 Aug 2008)
 
